--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <body>
         <h1> Заголовок над нашим текстом </h1>
         <p> Текст ТекстТекстТекстТекстТекстТекстТекстТекстТекстТекстТекстТекст </p>
+          <p> Текст ТекстТекстТекстТекстТекстТекстТекстТекстТекстТекстТекстТекст </p>
         <a href="#header">Link text</a>
         </body>
 </html>
